--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -303,14 +303,14 @@
                         android:id="@+id/imageView12"
                         android:layout_width="match_parent"
                         android:layout_height="32dp"
-                        android:src="@drawable/settings"
-                        app:srcCompat="@drawable/settings" />
+                        android:src="@android:drawable/ic_menu_info_details"
+                        app:srcCompat="@android:drawable/ic_menu_info_details" />
 
                     <TextView
                         android:id="@+id/textView14"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Settings"
+                        android:text="Info"
                         android:textAlignment="center"
                         android:textColor="#676767"
                         android:textSize="12sp" />
