--- a/app/src/main/res/layout/cart_item_layout.xml
+++ b/app/src/main/res/layout/cart_item_layout.xml
@@ -29,10 +29,10 @@
         android:id="@+id/title2Txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="8dp"
         android:text="title"
         android:textColor="@color/substract_background"
-        android:textSize="18sp"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/picCard"
         app:layout_constraintStart_toEndOf="@+id/picCard"
@@ -48,11 +48,12 @@
         android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/txtqtyincart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="8dp"
         android:text="1"
         android:textColor="#373b54"
         android:textSize="18sp"
@@ -68,10 +69,12 @@
         android:layout_height="25dp"
         android:layout_marginStart="28dp"
         android:text="0"
-        android:textColor="#373b54"
+        android:textColor="#3C3C3C"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/txtqtyincart"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.155"
         app:layout_constraintStart_toEndOf="@+id/txtqtyincart"
         app:layout_constraintTop_toTopOf="@+id/txtqtyincart"
         app:layout_constraintVertical_bias="1.0" />
