--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,7 +23,8 @@
 
     <EditText
         android:id="@+id/txtPassword"
-        android:layout_width="370dp"
+        android:layout_width="0dp"
+        app:layout_constraintWidth_percent="0.9"
         android:layout_height="50dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="12dp"
@@ -37,17 +38,18 @@
         android:id="@+id/btnLogin"
         android:layout_width="145dp"
         android:layout_height="48dp"
-        android:layout_marginStart="132dp"
         android:layout_marginTop="12dp"
         android:backgroundTint="#009688"
         android:text="SIGN IN"
         app:iconTint="#BF1919"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtPassword" />
 
     <EditText
         android:id="@+id/txtEmail"
-        android:layout_width="370dp"
+        android:layout_width="0dp"
+        app:layout_constraintWidth_percent="0.9"
         android:layout_height="50dp"
         android:layout_marginTop="56dp"
         android:ems="10"
@@ -63,8 +65,9 @@
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="180dp"
         android:layout_marginTop="12dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtPassword" />
 
