--- a/app/src/main/res/layout/lst_row_food.xml
+++ b/app/src/main/res/layout/lst_row_food.xml
@@ -35,7 +35,7 @@
                 android:text="ID:"
                 android:textAllCaps="true"
                 android:textColor="#4CAF50"
-                android:textSize="20sp"
+                android:textSize="16sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toEndOf="@+id/imgFood"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -49,21 +49,21 @@
                 android:text="QTY :"
                 android:textAllCaps="true"
                 android:textColor="#4CAF50"
-                android:textSize="20sp"
+                android:textSize="16sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toStartOf="@+id/txtQty"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/txtFood"
-                android:layout_width="223dp"
+                android:layout_width="252dp"
                 android:layout_height="49dp"
-                android:layout_marginStart="32dp"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="20dp"
                 android:text="FoodName"
-                android:textAlignment="textStart"
-                android:textSize="28sp"
+                android:textAlignment="center"
+                android:textSize="24sp"
                 android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/imgFood"
                 app:layout_constraintTop_toBottomOf="@+id/lalFoodName" />
 
@@ -74,7 +74,7 @@
                 android:layout_marginTop="4dp"
                 android:text="#Qty"
                 android:textAllCaps="true"
-                android:textSize="20sp"
+                android:textSize="16sp"
                 android:textStyle="bold|italic"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -86,7 +86,7 @@
                 android:layout_marginStart="4dp"
                 android:layout_marginTop="4dp"
                 android:text="#ID"
-                android:textSize="20sp"
+                android:textSize="16sp"
                 android:textStyle="bold|italic"
                 app:layout_constraintStart_toEndOf="@+id/lblFoodID"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -100,7 +100,7 @@
                 android:text="Item :"
                 android:textAllCaps="true"
                 android:textColor="#4CAF50"
-                android:textSize="20sp"
+                android:textSize="16sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toEndOf="@+id/imgFood"
                 app:layout_constraintTop_toBottomOf="@+id/lblFoodID" />
