--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,7 +10,6 @@
         android:id="@+id/textView13"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="82dp"
         android:layout_marginTop="204dp"
         android:text="Kitchen Login"
         android:textAlignment="center"
@@ -18,6 +17,7 @@
         android:textColor="#009688"
         android:textSize="34sp"
         android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -75,8 +75,8 @@
         android:id="@+id/imageView10"
         android:layout_width="159dp"
         android:layout_height="101dp"
-        android:layout_marginStart="124dp"
         android:layout_marginTop="88dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/menus_logo" />
